Bug 165099 - CRASH: selecting an animation after slideshow
Summary: CRASH: selecting an animation after slideshow
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All All
: highest critical
Assignee: Mike Kaganski
URL:
Whiteboard: target:25.8.0 target:24.8.6 target:24...
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2025-02-07 11:22 UTC by Xisco Faulí
Modified: 2025-02-19 05:07 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2025-02-07 11:22:35 UTC
Steps to reproduce:
1. Open Impress
2. Sidebar - Slide transition panel
3. F5 to slide the slideshow
4. ESC
5. select any other transition by double cling on it

-> Crash

Reproduced in

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7cd00ca413da8d29f54749c04493e85937a2fa38
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2025-02-07 11:23:37 UTC
Regression introduced by:

commit bc09a4f1ce1f6a714f7827a404aa6317b503d307	[log]
author	Mike Kaganski <mike.kaganski@collabora.com>	Wed Dec 04 14:25:42 2024 +0500
committer	Mike Kaganski <mike.kaganski@collabora.com>	Wed Dec 04 12:44:00 2024 +0100
tree 7c05b0b2059aed2381b21140511d3fe100c5cad2
parent 2c613da01d02d45a140b94b391a142aede46e8b8 [diff]

Disable subpixel AA in GraphicExporter::filter unconditionally

Bisected with: linux64-25.2
Comment 2 Mike Kaganski 2025-02-08 09:43:36 UTC
https://gerrit.libreoffice.org/c/core/+/181288
Comment 3 Commit Notification 2025-02-08 12:42:19 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ca31eac04b10fec6bf27a801b9164ec419062763

tdf#165099: do not notify change listeners about temporary changes

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2025-02-10 13:19:21 UTC
Verified in

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7da1497aa462e2b719aa9b308a749caf7b9a19b1
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

@Mike, thanks for fixing this issue!!
Comment 5 Commit Notification 2025-02-10 13:20:13 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/ab33bb9e3e1a3e2039715db6483e412d51a06f01

tdf#165099: do not notify change listeners about temporary changes

It will be available in 25.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2025-02-10 15:00:32 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/d9c7b214c6a040483431e9120099237072aa5bcb

tdf#165099: do not notify change listeners about temporary changes

It will be available in 24.8.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2025-02-11 21:27:08 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-8-5":

https://git.libreoffice.org/core/commit/2b2958c1b3ecfdbcd3faf3641b897efdf03b4837

tdf#165099: do not notify change listeners about temporary changes

It will be available in 24.8.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2025-02-14 10:21:57 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-2-1":

https://git.libreoffice.org/core/commit/ca508c33761a0b9583932ff04df00c919d5a56ec

tdf#165099: do not notify change listeners about temporary changes

It will be available in 25.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.